Fixed menu to show aligned in a straight line.
Aligned the menu bar as well

--- a/SparkLessons/src/main/webapp/resources/css/sparklessons.webflow.css
+++ b/SparkLessons/src/main/webapp/resources/css/sparklessons.webflow.css
@@ -429,7 +429,7 @@ p {
 }
 .logo-section {
   padding-top: 0px;
-  padding-bottom: 50px;
+  padding-bottom: 0px;
   background-color: #f1f1f1;
 }
 .hide {
